<resources>
    <string name="app_name">DonationMike</string>
    <string name="donateTitle">Welcome!</string>
    <string name="donateSubtitle">Please give generously</string>
    <string name="donateButton">Donate</string>
    <string name="action_settings">Settings</string>
    <string name="PayPal">PayPal</string>
    <string name="Direct">Direct</string>
    <string name="amountText">Amount</string>
    <string name="numberText" />
    <string name="AmountLabel" />
    <string name="CurrentAmount">Current amount</string>
    <string name="menuReport">Report</string>
    <string name="menuDonate">Donate</string>
    <string name="reportTitle">Report</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="Greeting">Welcome to the DonationMike App</string>
    <string name="LoginButton">Log In</string>
    <string name="SignupButton">Sign Up</string>
    <string name="signUpTitle">Sign Up</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="passwordPlaceholder">Password</string>
    <string name="registerButton">Register</string>
    <string name="loginTitle">Log In</string>
    <string name="logout">Log Out</string>
</resources>
