<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/signUpTitle"
        android:id="@+id/signUpTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="33dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/firstName"
        android:ems="10"
        android:id="@+id/firstName"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/signUpTitle"
        android:layout_alignStart="@+id/lastName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/lastName"
        android:ems="10"
        android:id="@+id/lastName"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/firstName"
        android:layout_alignStart="@+id/signUpTitle" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:text="@string/email"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/lastName"
        android:layout_alignStart="@+id/lastName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_below="@+id/email"
        android:layout_alignStart="@+id/email"
        android:layout_marginTop="46dp"
        android:text="@string/password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/passwordPlaceholder"
        android:id="@+id/passwordPlaceholder"
        android:layout_below="@+id/password"
        android:layout_alignStart="@+id/password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerButton"
        android:id="@+id/registerButton"
        android:onClick="registerButtonPressed"
        android:layout_below="@+id/passwordPlaceholder"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="47dp" />
</RelativeLayout>