<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.donation.Donate">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/donateTitle"
        android:id="@+id/donateTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/donateSubtitle"
        android:id="@+id/donateSubtitle"
        android:layout_below="@+id/donateTitle"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donateButton"
        android:id="@+id/donateButton"
        android:onClick="donateButtonPressed"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/progressBar" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:indeterminate="false"
        android:layout_above="@+id/numberText"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="39dp" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/amountPicker"
        android:orientation="vertical"
        android:layout_alignTop="@+id/paymentMethod"
        android:layout_alignParentEnd="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/paymentMethod"
        android:layout_below="@+id/donateSubtitle"
        android:layout_toStartOf="@+id/donateButton"
        android:layout_marginTop="28dp"
        android:layout_alignEnd="@+id/donateSubtitle">

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/PayPal"
            android:id="@+id/PayPal"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Direct"
            android:id="@+id/Direct"
            android:checked="false" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/amountText"
        android:id="@+id/amountText"
        android:textStyle="bold"
        android:layout_below="@+id/progressBar"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/numberText"
        android:text="@string/numberText"
        android:layout_marginBottom="33dp"
        android:layout_above="@+id/donateButton"
        android:layout_toEndOf="@+id/CurrentAmount" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/CurrentAmount"
        android:id="@+id/CurrentAmount"
        android:layout_alignBaseline="@+id/donateButton"
        android:layout_alignBottom="@+id/donateButton"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AmountLabel"
        android:id="@+id/AmountLabel"
        android:layout_alignTop="@+id/CurrentAmount"
        android:layout_alignEnd="@+id/paymentMethod"
        android:layout_alignBottom="@+id/CurrentAmount" />

</RelativeLayout>
