<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Greeting"
        android:id="@+id/Greeting"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="83dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginButton"
        android:id="@+id/LoginButton"
        android:onClick="loginButtonPressed"
        android:layout_below="@+id/Greeting"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignupButton"
        android:id="@+id/SignupButton"
        android:layout_below="@+id/LoginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp" />
</RelativeLayout>